<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBlue"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.Visualizer">
...
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:scaleX="-1"
            android:src="@android:drawable/ic_menu_revert" />

        <Spinner
            android:id="@+id/spinner_tree_options"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:spinnerMode="dropdown"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="18sp" />
...
